kermeta_projects/fr.irisa.triskell.kermeta.io/test/typechecher_tests/invalid/013_kermetaSignature/Signature.kmt


package Signature;

using kermeta::standard
using kermeta::io


class Top {}

class Middle inherits  Top {
        operation triggerError() is do
end
}

class Bottom inherits  Middle {}

class Up
{
	operation cv(t : Top) : String is do
		result := "Up"
	end
	operation inv(m : Middle) : String is do
		result := "Up"
	end
	operation ctv(b : Bottom) : String is do
	 	result := "Up"
	end
}

class Down inherits Up
{
	method cv(m : Middle) : String is do
	// m.triggerError() // pour déclencher l'erreur de type
		result := "Down"
	end
	method inv(m : Middle) : String is do
		result := "Down"
	end
	method ctv(m : Middle) : String is do
		result := "Down"
	end
}

